--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
             margin-right: 10px; /* Space between the image and text */
         }
 
+        /* Logo styling */
+        .logo {
+            width: 100px;
+            height: auto;
+            margin-right: 15px;
+        }
+
         /* Anniversary text at bottom */
         .anniversary {
             text-align: center;
@@ -60,6 +67,23 @@
             font-weight: bold;
             background-color: black;
             color: white;
+        }
+
+        /* Media queries for responsiveness */
+        @media screen and (max-width: 768px) {
+            /* On smaller screens, adjust navigation font size and spacing */
+            nav ul {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            nav ul li {
+                margin: 10px 0;
+            }
+
+            nav ul li a {
+                font-size: 18px;
+            }
         }
     </style>
 </head>
@@ -97,4 +121,3 @@
 
 </body>
 </html>
-
