--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         /* Ensure the heading text color and size */
         .section h2 {
             color: #be185d; /* Red for the heading */
-            font-size: 1.3em; /* Slightly smaller heading font size */
+            font-size: 1.5em; /* Heading font size */
             margin-bottom: 15px;
         }
 
@@ -165,82 +165,42 @@
         <main>
             <!-- 板块 1 -->
             <div class="section">
-                <h2>单曲合集</h2>
-                <p>aespa的单曲大全</p>
-                <a href="https://aespasynkmy.github.io/danqu/" class="link-button" target="_blank">
-                    🎶 详情
+                <h2>MY time, aespa!</h2>
+                <p>视频合集</p>
+                <a href="https://aespasynkmy.github.io/mytimeaespa/" class="link-button" target="_blank">
+                    🎥 观看视频
                 </a>
             </div>
 
             <!-- 板块 2 -->
             <div class="section">
-                <h2>Mini1</h2>
-                <p>Savage</p>
-                <a href="https://weibo.com/5795013414/5099115975021698" class="link-button" target="_blank">
-                    🎶 详情
+                <h2>221225 SBS歌谣大战</h2>
+                <p>Intro + 怪火 舞台</p>
+                <a href="https://weibo.com/5795013414/5100737581550002" class="link-button" target="_blank">
+                    🎥 观看视频
                 </a>
+                <!-- 新增部分 -->
+    <p>Girls 舞台</p>
+    <a href="https://weibo.com/5795013414/5100737995997419" class="link-button" target="_blank">
+        🎥 观看视频
+    </a>
             </div>
 
             <!-- 板块 3 -->
             <div class="section">
-                <h2>Mini2</h2>
-                <p>Girls</p>
-                <a href="https://aespasynkmy.github.io/mini2/" class="link-button" target="_blank">
-                    🎶 详情
+                <h2>221231 MBC歌谣大祭典</h2>
+                <p>怪火 + Girls 舞台</p>
+                <a href="https://weibo.com/5795013414/5100742323210313" class="link-button" target="_blank">
+                    🎥 观看视频
                 </a>
             </div>
 
             <!-- 板块 4 -->
             <div class="section">
-                <h2>Mini3</h2>
-                <p>MY WORLD</p>
-                <a href="https://aespasynkmy.github.io/mini3/" class="link-button" target="_blank">
-                    🎶 详情
-                </a>
-            </div>
-
-            <!-- 板块 5 -->
-            <div class="section">
-                <h2>Mini4</h2>
-                <p>Drama</p>
-                <a href="https://weibo.com/5795013414/5096323892381666" class="link-button" target="_blank">
-                    🎶 详情
-                </a>
-            </div>
-
-            <!-- 板块 6 (新增) -->
-            <div class="section">
-                <h2>The 1th Album</h2>
-                <p>Armageddon</p>
-                <a href="https://aespasynkmy.github.io/t1a/" class="link-button" target="_blank">
-                    🎶 详情
-                </a>
-            </div>
-
-            <!-- 板块 7 (新增) -->
-            <div class="section">
-                <h2>日本出道专</h2>
-                <p>Hot Mess</p>
-                <a href="https://weibo.com/5795013414/5099482699533065" class="link-button" target="_blank">
-                    🎶 详情
-                </a>
-            </div>
-            
-            <!-- 板块 8 (新增) -->
-            <div class="section">
-                <h2>Mini5</h2>
-                <p>Whiplash</p>
-                <a href="https://weibo.com/5795013414/5094526905488463" class="link-button" target="_blank">
-                    🎶 详情
-                </a>
-            </div>
-
-            <!-- 板块 9 (新增) -->
-            <div class="section">
-                <h2>Mini6</h2>
-                <p>Rich Man</p>
-                <a href="https://weibo.com/5795013414/5207661885787641" class="link-button" target="_blank">
-                    🎶 详情
+                <h2>230218 CCMA</h2>
+                <p>怪火 + Girls 舞台</p>
+                <a href="https://weibo.com/5795013414/5100745836204326" class="link-button" target="_blank">
+                    🎥 观看视频
                 </a>
             </div>
         </main>
@@ -265,11 +225,4 @@
     </script>
 </body>
 </html>
-
-
-
-
-
-
-
 
