--- a/index.html
+++ b/index.html
@@ -166,22 +166,22 @@
             <!-- 板块 1 -->
             <div class="section">
                 <h2>MY time, aespa!</h2>
-                <p>视频合集</p>
+                <p>20201204-20201219</p>
                 <a href="https://aespasynkmy.github.io/mytimeaespa/" class="link-button" target="_blank">
-                    🎥 观看视频
+                    🎥 视频合集
                 </a>
             </div>
 
             <!-- 板块 2 -->
             <div class="section">
-                <h2>221225 SBS歌谣大战</h2>
-                <p>Intro + 怪火 舞台</p>
-                <a href="https://weibo.com/5795013414/5100737581550002" class="link-button" target="_blank">
+                <h2>MerrY MerrY aespa</h2>
+                <p>激烈的毛衣争夺战!</p>
+                <a href="https://www.bilibili.com/video/BV1f64y1o7xf/?spm_id_from=333.1387.upload.video_card.click&vd_source=f1d1cd489066437ea7682d8329839f9c" class="link-button" target="_blank">
                     🎥 观看视频
                 </a>
                 <!-- 新增部分 -->
-    <p>Girls 舞台</p>
-    <a href="https://weibo.com/5795013414/5100737995997419" class="link-button" target="_blank">
+    <p>嘘! 我只告诉你，MY们!</p>
+    <a href="https://www.bilibili.com/video/BV1RK411u7so/?spm_id_from=333.1387.upload.video_card.click&vd_source=f1d1cd489066437ea7682d8329839f9c" class="link-button" target="_blank">
         🎥 观看视频
     </a>
             </div>
@@ -225,4 +225,5 @@
     </script>
 </body>
 </html>
+
 
